[package]
name = "kr_api"
version = "0.1.0"
edition = "2021"

[features]
# Enables support for outputting JUnit XML report.
output-junit = ["dep:junit-report", "timestamps"]
# Enables timestamps collecting for all events.
timestamps = []

[[test]]
name = "cucumber"
harness = false
path = "tests/api_step_definitions.rs"
required-features = ["output-junit"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3.0" }
chrono = "0.4"
sha2 = "0.10.8"
hmac = "0.12.0"
hex = "0.4"
base64 = "0.13.0"
serde_urlencoded = "0.6"
generic-array = "0.14.4"
httpmock = "0.7.0"
mockall = "0.12.1"
junit-report = { version = "0.8.3", optional = true }

[dev-dependencies]
cucumber = { version = "0.21.1", features = ["output-junit", "timestamps"] }

[lib]
name = "kr_api"
path = "src/lib.rs"

[[bin]]
name = "kr_api"
path = "src/main.rs"